Fixed white space at bottom of footer

--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -105,6 +105,13 @@ header.carousel .fill {
 }
 
 
+/* Footer Styles */
+
+footer {
+    margin: 50px 0 0 0;
+}
+
+
 /* 404 Page Styles */
 
 .error-404 {
@@ -129,13 +136,6 @@ header.carousel .fill {
 .period {
     display: block;
     font-style: italic;
-}
-
-
-/* Footer Styles */
-
-footer {
-    margin: 50px 0;
 }
 
 
